--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 </ul>
             </nav>
             <ul class="auth-nav list-style">
-                <li class="auth-nav-li"><a href="mailto:info@devstudio.com" class="link-list">info@devstudio.com</a>
+                <li class="auth-nav-li">
+                    <svg class="auth-nav-icon" width="16" height="12"><use href="./images/icons.svg#envelope"></use>
+                    </svg>
+                    <a href="mailto:info@devstudio.com" class="link-list">info@devstudio.com</a>
                 </li>
                 <li class="auth-nav-li"><a href="tel:+380961111111" class="link-list">+38 096 111 11 11</a></li>
             </ul>
