Зроблені кнопки соцмереж та футер

--- a/index.html
+++ b/index.html
@@ -132,12 +132,58 @@
                 <h3 class="team-list-name">Игорь Демьяненко</h3>
                 <p class="team-list-position">Product Designer</p>
               </div>
+              <div class="team-social-main">
+                <ul class="team-social-list list-style">
+                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                    <svg class="team-list-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
+              </div>
             </li>
             <li class="team-list-li">
               <img src="./images/olga-repina.jpg" alt="Ольга Репина" width="270" />
               <div class="team-name-position">
                 <h3 class="team-list-name">Ольга Репина</h3>
                 <p class="team-list-position">Frontend Developer</p>
+              </div>
+              <div class="team-social-main">
+                <ul class="team-social-list list-style">
+                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                    <svg class="team-list-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
               </div>
             </li>
             <li class="team-list-li">
@@ -146,6 +192,29 @@
                 <h3 class="team-list-name">Николай Тарасов</h3>
                 <p class="team-list-position">Marketing</p>
               </div>
+              <div class="team-social-main">
+                <ul class="team-social-list list-style">
+                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                    <svg class="team-list-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
+              </div>
             </li>
             <li class="team-list-li">
               <img src="./images/myhail-ermakov.jpg" alt="Михаил Ермаков" width="270" />
@@ -153,13 +222,35 @@
                 <h3 class="team-list-name">Михаил Ермаков</h3>
                 <p class="team-list-position">UI Designer</p>
               </div>
+              <div class="team-social-main">
+                <ul class="team-social-list list-style">
+                  <li class="team-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://twitter.com">                    
+                    <svg class="team-list-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg></a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.facebook.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                  <li class="team-social-li"><a class="link-list" href="https://www.linkedin.com">
+                    <svg class="team-list-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
-    </main>
 
-    <!--Our clients-->
+      <!--Our clients-->
     <section class="client section">
       <div class="container">
         <h2 class="client-title">Постоянные клиенты</h2>
@@ -203,11 +294,12 @@
         </ul>
       </div>
     </section>
-
+  </main>
     <!--Footer-->
     <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
+        <div class="footer-box">
         <address>
           <ul class="address list-style">
             <li>
@@ -221,6 +313,31 @@
             </li>
           </ul>
         </address>
+        <div class="Footer-social-main">
+          <p class="footer-style">присоединяйтесь</p>
+          <ul class="footer-social-list list-style">
+            <li class="footer-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+              <svg class="footer-list-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a></li>
+            <li class="footer-social-li"><a class="link-list" href="https://twitter.com">                    
+              <svg class="footer-list-icon">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg></a></li>
+            <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com">
+              <svg class="footer-list-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a></li>
+            <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com">
+              <svg class="footer-list-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a></li>
+          </ul>
+        </div>
+        </div>
       </div>
     </footer>
   </body>
