--- a/portfolio.html
+++ b/portfolio.html
@@ -15,24 +15,32 @@
 <!--Header-->
 <header>
     <div class="header container">
-    <nav class="header">
+      <nav class="header">
         <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio">Studio</span></a>
-    <ul class="site-nav list-style">
-        <li class="site-nav-li"><a href="./index.html" class="li link-list">Студия</a></li>
-        <li class="site-nav-li"><a href="./portfolio.html" class="li link-active">Портфолио</a></li>
-        <li class="site-nav-li"><a href="" class="li link-list">Контакты</a></li>
-    </ul>
-    </nav>
-    <ul class="auth-nav list-style">
+        <ul class="site-nav list-style">
+          <li class="site-nav-li">
+            <a href="./index.html" class="li link-list">Студия</a>
+          </li>
+          <li class="site-nav-li">
+            <a href="./portfolio.html" class="li link-active">Портфолио</a>
+          </li>
+          <li class="site-nav-li">
+            <a href="" class="li link-list">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="auth-nav list-style">
         <li class="auth-nav-li">
-            <a href="mailto:info@devstudio.com" class="link-list"><svg class="auth-nav-icon-mail"width="20" height="15">
-               <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
-                </li>
-            <svg class="auth-nav-icon-phone" width="14" height="22">
-            <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a></li>
-    </ul>
-        </div>
-    </header>
+          <a href="mailto:info@devstudio.com" class="link-list"><svg class="auth-nav-icon-mail" width="20" height="15">
+              <use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a>
+        </li>
+        <li class="auth-nav-li">
+          <a href="tel:+380961111111" class="link-list"><svg class="auth-nav-icon-phone" width="14" height="22">
+            <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
 <!-- Main section-->
     <main>  
