Дороблений футер в Портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -133,17 +133,49 @@
     </main>
 
 <!--Footer-->
-    <footer class="footer">
-        <div class="container">
-        <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
-        <address>
-            <ul class="address list-style">
-                <li><a class="address-link link-list" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="footer-nav"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li class="footer-nav"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="container">
+      <a href="./index.html" class="logo link-list"><span class="web">Web</span><span class="studio-footer">Studio</span></a>
+      <div class="footer-box">
+      <address>
+        <ul class="address list-style">
+          <li>
+            <a class="address-link link-list" href="https://goo.gl/maps/8xAyCc6BftRqbFo67" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li class="footer-nav">
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          </li>
+          <li class="footer-nav">
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+      <div class="Footer-social-main">
+        <p class="footer-style">присоединяйтесь</p>
+        <ul class="footer-social-list list-style">
+          <li class="footer-social-li"><a class="link-list" href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+            <svg class="footer-list-icon">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a></li>
+          <li class="footer-social-li"><a class="link-list" href="https://twitter.com">                    
+            <svg class="footer-list-icon">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg></a></li>
+          <li class="footer-social-li"><a class="link-list" href="https://www.facebook.com">
+            <svg class="footer-list-icon">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a></li>
+          <li class="footer-social-li"><a class="link-list" href="https://www.linkedin.com">
+            <svg class="footer-list-icon">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a></li>
+        </ul>
+      </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
